monitoring/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: monitoring
    triggerupdate: 0.0.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/part-of: monitoring
  template:
    metadata:
      name: grafana
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/part-of: monitoring
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - name: grafana
              containerPort: 3000
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-storage
            - mountPath: /etc/grafana/provisioning/datasources
              name: grafana-datasources
              readOnly: false
            - mountPath: /etc/grafana/provisioning/dashboards
              name: grafana-dashboard-provider
              readOnly: false
            - mountPath: /var/lib/grafana/dashboards/
              name: grafana-dashboards
              readOnly: false
      volumes:
        - name: grafana-storage
          emptyDir: {}
        - name: grafana-dashboard-provider
          configMap:
            defaultMode: 420
            name: grafana-dashboard-provider
        - name: grafana-dashboards
          configMap:
            defaultMode: 420
            name: grafana-dashboards
        - name: grafana-datasources
          configMap:
            defaultMode: 420
            name: grafana-datasources
