monitoring/grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: monitoring
spec:
  rules:
    - host: grafana.danielr1996.de
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
---
